Add README with Docker setup instructions
- Move Docker/NGC setup steps to README.md
- Update notebook to reference README for setup/cleanup
- Include prerequisites, output files, and CLI commands covered

--- a/use-case-examples/Build a Computer Use Agent with Synthetic Data /langgraph_cli_synthetic_data.ipynb
+++ b/use-case-examples/Build a Computer Use Agent with Synthetic Data /langgraph_cli_synthetic_data.ipynb
@@ -33,12 +33,9 @@
       "source": [
         "## Step 1: Launch NeMo Data Designer via Docker Compose\n",
         "\n",
-        "First, we need to authenticate with NGC (NVIDIA GPU Cloud) and launch the Data Designer service. Make sure you have your `NGC_CLI_API_KEY` environment variable set.\n",
+        "> ⚠️ **Before running this notebook**, follow the setup instructions in [README.md](./README.md) to start the NeMo Data Designer Docker service.\n",
         "\n",
-        "> **Prerequisites:**\n",
-        "> - Docker and Docker Compose installed\n",
-        "> - NGC CLI API key (get one at [ngc.nvidia.com](https://ngc.nvidia.com))\n",
-        "> - NGC CLI installed (`pip install ngc-cli`)\n"
+        "The cells below are provided for convenience if you haven't started the service yet.\n"
       ]
     },
     {
@@ -551,7 +548,7 @@
       "source": [
         "## Cleanup\n",
         "\n",
-        "When you're done, you can stop the Data Designer services.\n"
+        "When you're done, stop the Data Designer services. See [README.md](./README.md) for cleanup instructions.\n"
       ]
     },
     {
