--- a/usage-cookbook/Llama-Nemotron-Super-49B-v1.5/nim_tool_calling_cookbook.ipynb
+++ b/usage-cookbook/Llama-Nemotron-Super-49B-v1.5/nim_tool_calling_cookbook.ipynb
@@ -102,7 +102,6 @@
    "source": [
     "import json\n",
     "import os\n",
-    "\n",
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
     "\n",
@@ -116,7 +115,7 @@
     "    raise RuntimeError(\"Set NVIDIA_API_KEY in your environment or .env before running this cell.\")\n",
     "\n",
     "client = OpenAI(api_key=api_key, base_url=NIM_BASE_URL)\n",
-    "print(f\"Client ready for {MODEL_ID}\")"
+    "print(f\"Client ready for {MODEL_ID}\")\n"
    ]
   },
   {
@@ -161,7 +160,6 @@
     "        \"wind_kph\": forecast[\"wind_kph\"],\n",
     "    }\n",
     "\n",
-    "\n",
     "tools = [\n",
     "    {\n",
     "        \"type\": \"function\",\n",
@@ -185,7 +183,7 @@
     "            },\n",
     "        },\n",
     "    }\n",
-    "]"
+    "]\n"
    ]
   },
   {
@@ -290,11 +288,14 @@
     "\n",
     "\n",
     "final_completion = client.chat.completions.create(\n",
-    "    model=MODEL_ID, messages=messages, temperature=0.2, max_tokens=512\n",
+    "    model=MODEL_ID,\n",
+    "    messages=messages,\n",
+    "    temperature=0.2,\n",
+    "    max_tokens=512\n",
     ")\n",
     "final_message = final_completion.choices[0].message\n",
     "print(\"\\nFinal model answer:\\n\")\n",
-    "print(final_message.content)"
+    "print(final_message.content)\n"
    ]
   },
   {
