--- a/usage-cookbook/Llama-Nemotron-Super-49B-v1.5/vllm_api_cookbook.ipynb
+++ b/usage-cookbook/Llama-Nemotron-Super-49B-v1.5/vllm_api_cookbook.ipynb
@@ -119,9 +119,8 @@
    ],
    "source": [
     "# GPU environment check\n",
-    "import platform\n",
-    "\n",
     "import torch\n",
+    "import platform\n",
     "\n",
     "print(f\"Python: {platform.python_version()}\")\n",
     "print(f\"PyTorch: {torch.__version__}\")\n",
@@ -131,9 +130,7 @@
     "if torch.cuda.is_available():\n",
     "    for i in range(torch.cuda.device_count()):\n",
     "        props = torch.cuda.get_device_properties(i)\n",
-    "        print(\n",
-    "            f\"GPU[{i}]: {props.name} | SM count: {props.multi_processor_count} | Mem: {props.total_memory / 1e9:.2f} GB\"\n",
-    "        )"
+    "        print(f\"GPU[{i}]: {props.name} | SM count: {props.multi_processor_count} | Mem: {props.total_memory / 1e9:.2f} GB\")\n"
    ]
   },
   {
@@ -149,6 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from vllm import LLM, SamplingParams\n",
     "\n",
     "MODEL_ID = \"nvidia/Llama-3_3-Nemotron-Super-49B-v1.5\"\n",
@@ -162,7 +160,7 @@
     "    tensor_parallel_size=1,\n",
     ")\n",
     "\n",
-    "print(\"Model ready\")"
+    "print(\"Model ready\")\n"
    ]
   },
   {
@@ -285,6 +283,8 @@
     }
    ],
    "source": [
+    "from vllm import SamplingParams\n",
+    "\n",
     "params = SamplingParams(temperature=0.6, max_tokens=200)\n",
     "\n",
     "# Single prompt\n",
@@ -295,11 +295,11 @@
     "prompts = [\n",
     "    \"Hello, my name is\",\n",
     "    \"The capital of France is\",\n",
-    "    \"Explain quantum computing in simple terms:\",\n",
+    "    \"Explain quantum computing in simple terms:\"\n",
     "]\n",
     "outputs = llm.generate(prompts, sampling_params=params)\n",
     "for i, out in enumerate(outputs):\n",
-    "    print(f\"\\nPrompt {i + 1}: {out.prompt!r}\")\n",
+    "    print(f\"\\nPrompt {i+1}: {out.prompt!r}\")\n",
     "    print(out.outputs[0].text)"
    ]
   },
@@ -378,8 +378,7 @@
     "        print(ch, end=\"\", flush=True)\n",
     "    print()\n",
     "\n",
-    "\n",
-    "stream_like(\"Write a haiku about GPUs.\", llm, SamplingParams(temperature=0.7, max_tokens=80))"
+    "stream_like(\"Write a haiku about GPUs.\", llm, SamplingParams(temperature=0.7, max_tokens=80))\n"
    ]
   },
   {
@@ -468,7 +467,7 @@
     "    model=\"nemotron\",\n",
     "    messages=[\n",
     "        {\"role\": \"system\", \"content\": \"You are a helpful AI assistant.\"},\n",
-    "        {\"role\": \"user\", \"content\": \"Give me 3 bullet points about vLLM.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Give me 3 bullet points about vLLM.\"}\n",
     "    ],\n",
     "    temperature=0.6,\n",
     "    max_tokens=256,\n",
@@ -482,7 +481,7 @@
     "    model=\"nemotron\",\n",
     "    messages=[\n",
     "        {\"role\": \"system\", \"content\": \"You are a helpful AI assistant.\"},\n",
-    "        {\"role\": \"user\", \"content\": \"Write a short poem about GPUs.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Write a short poem about GPUs.\"}\n",
     "    ],\n",
     "    temperature=0.7,\n",
     "    max_tokens=256,\n",
@@ -492,7 +491,7 @@
     "    delta = chunk.choices[0].delta\n",
     "    if delta and delta.content:\n",
     "        print(delta.content, end=\"\", flush=True)\n",
-    "print()"
+    "print()\n"
    ]
   },
   {
@@ -509,9 +508,7 @@
    "outputs": [],
    "source": [
     "# Reasoning ON (default)\n",
-    "reasoning_prompt = (\n",
-    "    \"I have 5 apples. I eat 2, then my friend gives me 3 more. How many apples do I have now?\"\n",
-    ")\n",
+    "reasoning_prompt = \"I have 5 apples. I eat 2, then my friend gives me 3 more. How many apples do I have now?\"\n",
     "messages_on = [\n",
     "    {\"role\": \"system\", \"content\": \"You are a helpful reasoning assistant.\"},\n",
     "    {\"role\": \"user\", \"content\": reasoning_prompt},\n",
@@ -538,7 +535,7 @@
     "    temperature=0.0,\n",
     "    max_tokens=256,\n",
     ")\n",
-    "print(response_off.choices[0].message.content)"
+    "print(response_off.choices[0].message.content)\n"
    ]
   },
   {
